<resources>
    <string name="app_name">Guess Who Isn\'t Getting A Gift?</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">SEND</string>
    <string name="to">To :</string>
    <string name="cc">CC :</string>
    <string name="subject">Subject :</string>
    <string name="message">Message :</string>
    <string name="reset">Reset</string>
    <string name="email">Email :</string>
    <string name="name">Name :</string>
    <string name="add">Add</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="pick">Pick</string>
    <string name="enter_email">Enter email</string>
    <string name="load">Load</string>
    <string name="sub_item">Sub Item</string>
    <string name="list_item">List Item</string>
</resources>
